--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.7",
