--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "concurrently --kill-others \"npm run server\" \"npm run client\"",
+    "dev": "nodemon server.js",
+    "server": "node server.js",
+    "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "ejs": "^3.1.6",
